# irods_project_template_cpp_auth_plugin

./: CMakeLists.txt  README.md  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py
packaging/: postinst  test_project_template_cpp_auth_plugin.py
plugin/: CMakeLists.txt
plugin/include/irods/private/project_template_cpp/: project_template_cpp_plugin_logging_category.hpp
plugin/src/: main.cpp
